--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://gagegabaldon.github.io",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
     "@fortawesome/free-brands-svg-icons": "^6.1.0",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +46,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.3",
+    "gh-pages": "^3.2.3",
     "postcss": "^8.4.11",
     "tailwindcss": "^3.0.23"
   }
